kubernetes/api-bluegreen-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: api
      tier: backend
  template:
    metadata:
      labels:
        app: api
        tier: backend
    spec:
      terminationGracePeriodSeconds: 150
      containers:
        - name: backend
          image: yeriimii/upup-radio-backend:2025-01-07T20-32-37
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 9292
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9292
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9292
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: logs-volume
              mountPath: /app/logs
          command: [ "sh", "-c", "mkdir -p /app/logs && java -Dspring.profiles.active=${SPRING_ACTIVE_PROFILE} -Duser.timezone=Asia/Seoul -jar ${JAR_FILENAME}.jar" ]
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: logs-pvc
  strategy:
    blueGreen:
      activeService: api-svc
      autoPromotionEnabled: true
