kubernetes/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: api
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: server
    - protocol: TCP
      port: 9292
      targetPort: 9292
      name: actuator
  type: ClusterIP
