kubernetes/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: api
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      tier: backend
  template:
    metadata:
      labels:
        app: api
        tier: backend
    spec:
      containers:
        - name: backend
          image: yeriimii/upup-radio-backend:2025-01-06T00-10-59
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: logs-volume
              mountPath: /app/logs
          command: [ "sh", "-c", "mkdir -p /app/logs && java -Dspring.profiles.active=${SPRING_ACTIVE_PROFILE} -Duser.timezone=Asia/Seoul -jar ${JAR_FILENAME}.jar" ]
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: logs-pvc
