kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    database: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      database: redis
  template:
    metadata:
      labels:
        database: redis
    spec:
      containers:
        - name: redis
          image: redis:7.4-alpine
          ports:
            - containerPort: 6379
