kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    nginx.ingress.kubernetes.io/enable-sticky-session: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://upup-radio.site"
    nginx.ingress.kubernetes.io/cors-allow-methods: "HEAD, GET, POST, PUT, PATCH, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, X-Refresh-Token, Cache-Control"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - upup-radio.site
      secretName: radio-cert
  ingressClassName: nginx
  rules:
    - host: "*.upup-radio.site"
      http:
        paths:
          - path: /api/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-svc
                port:
                  number: 8080
          - path: /login/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-svc
                port:
                  number: 8080
          - path: /oauth2/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
